--- a/loginMVC/Content/Site.css
+++ b/loginMVC/Content/Site.css
@@ -22,12 +22,15 @@ select,
 textarea {
     max-width: 280px;
 }
-.container {
+
+.containner {
+ 
     width: 400px;
     margin: 0 auto;
 }
 
 .titulo {
+   
     margin-bottom: 30px;
     text-transform: uppercase;
 }
