--- a/loginMVC/Views/Conta/Login.cshtml
+++ b/loginMVC/Views/Conta/Login.cshtml
@@ -1,9 +1,13 @@
 ﻿
+<!-- Mostrar aonde o POST está indo -->
+@model loginMVC.Models.LoginViewModel
+
+
 @{
     ViewBag.Title = "Login";
 }
 
-<div class="container">
+<div class="containner">
     <div class="row">
         <h3 class="titulo">Entrar no Sistema</h3>
     </div>
@@ -11,17 +15,20 @@
         <secion id="loginForm">
             @using (Html.BeginForm("Login", "Conta", new { ReturnUlr = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
+                @Html.ValidationSummary(true, "", new { @class = "text-danget"})
                 <div class="form-group">
                     @Html.LabelFor(m => m.Usuario, new { @class = "forme-label col-md-2" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Usuario, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Usuario,"", new { @class = "text-danger" })
                     </div>
                 </div>
 
                 <div class="form-group">
                     @Html.LabelFor(m => m.Senha, new { @class = "forme-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Senha, new { @class = "form-control" })
+                        @Html.PasswordFor(m => m.Senha, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Senha, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
@@ -35,6 +42,7 @@
                         <input type="submit" class="btn btn-success" value="Entrar" />
                     </div>
                 </div>
+            
             }
 
 
@@ -42,4 +50,6 @@
     </div>
 </div>
 
-
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+    }
