--- a/loginMVC/Views/Shared/_Layout.cshtml
+++ b/loginMVC/Views/Shared/_Layout.cshtml
@@ -18,76 +18,92 @@
                 </button>
                 @Html.ActionLink("Controle de Estoque", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+            @if (Request.IsAuthenticated)
+            {
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
 
-                    <!-- Menu Cadastros-->
-                    <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cadastros
-                        <span class="caret"></span>
-                        </a>
-                    <!-- Serve para criar os menus quando clicar-->
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Grupos de Produtos", "GrupoProduto", "Cadastro")</li>
-                            <li>@Html.ActionLink("Marcas de Produtos", "MarcaProduto", "Cadastro")</li>
-                            <li>@Html.ActionLink("Locais de armazenamento", "LocalProduto", "Cadastro")</li>
-                            <li>@Html.ActionLink("Unidades de Medida", "UnidadeMedida", "Cadastro")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink("Produtos", "Produto", "Cadastro")</li>
-                            <li>@Html.ActionLink("Países", "Pais", "Cadastro")</li>
-                            <li>@Html.ActionLink("Estados", "Estado", "Cadastro")</li>
-                            <li>@Html.ActionLink("Cidade", "Cidade", "Cadastro")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink("Fornecedores", "Fornecedor", "Cadastro")</li>
-                            <li>@Html.ActionLink("Perfis de Usuários", "PerfilUsuario", "Cadastro")</li>
-                            <li>@Html.ActionLink("Usuários", "Usuario", "Cadastro")</li>
-                        </ul>
-                    </li>
+                        <!-- Menu Cadastros-->
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Cadastros
+                                <span class="caret"></span>
+                            </a>
+                            <!-- Serve para criar os menus quando clicar-->
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Grupos de Produtos", "GrupoProduto", "Cadastro")</li>
+                                <li>@Html.ActionLink("Marcas de Produtos", "MarcaProduto", "Cadastro")</li>
+                                <li>@Html.ActionLink("Locais de armazenamento", "LocalProduto", "Cadastro")</li>
+                                <li>@Html.ActionLink("Unidades de Medida", "UnidadeMedida", "Cadastro")</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Produtos", "Produto", "Cadastro")</li>
+                                <li>@Html.ActionLink("Países", "Pais", "Cadastro")</li>
+                                <li>@Html.ActionLink("Estados", "Estado", "Cadastro")</li>
+                                <li>@Html.ActionLink("Cidade", "Cidade", "Cadastro")</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Fornecedores", "Fornecedor", "Cadastro")</li>
+                                <li>@Html.ActionLink("Perfis de Usuários", "PerfilUsuario", "Cadastro")</li>
+                                <li>@Html.ActionLink("Usuários", "Usuario", "Cadastro")</li>
+                            </ul>
+                        </li>
 
 
-                    <!-- Menu Operações -->
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Operações
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Entrada de Produtos", "EntradaEstoque", "Operacao")</li>
-                            <li>@Html.ActionLink("Saída de Produtos", "SaidaEstoque", "Operacao")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink("Lançamento de perdas de produtos", "LancPerdaProduto", "Operacao")</li>
-                            <li>@Html.ActionLink("Inventário de estoque", "Inventario", "Operacao")</li>
-                        </ul>
-                    </li>
+                        <!-- Menu Operações -->
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Operações
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Entrada de Produtos", "EntradaEstoque", "Operacao")</li>
+                                <li>@Html.ActionLink("Saída de Produtos", "SaidaEstoque", "Operacao")</li>
+                                <li class="divider"></li>
+                                <li>@Html.ActionLink("Lançamento de perdas de produtos", "LancPerdaProduto", "Operacao")</li>
+                                <li>@Html.ActionLink("Inventário de estoque", "Inventario", "Operacao")</li>
+                            </ul>
+                        </li>
 
-                    <!-- Menu Relátorios-->
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Relatórios
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Posição do Estoque", "PosicaoEstoque", "Relatorio")</li>
-                            <li>@Html.ActionLink("Ressuprimento", "Ressuprimento", "Relatorio")</li>
-                        </ul>
-                    </li>
+                        <!-- Menu Relátorios-->
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Relatórios
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Posição do Estoque", "PosicaoEstoque", "Relatorio")</li>
+                                <li>@Html.ActionLink("Ressuprimento", "Ressuprimento", "Relatorio")</li>
+                            </ul>
+                        </li>
 
-                    <!-- Menu Gráficos -->
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Gráficos
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Perdas do mês", "PerdaMes", "Grafico")</li>
-                            <li>@Html.ActionLink("Entrada vs Saida mês", "EntradaSaidaMes", "Grafico")</li>
-                        </ul>
-                    </li>
-                </ul>
+                        <!-- Menu Gráficos -->
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Gráficos
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Perdas do mês", "PerdaMes", "Grafico")</li>
+                                <li>@Html.ActionLink("Entrada vs Saida mês", "EntradaSaidaMes", "Grafico")</li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>@Html.ActionLink("Sobre", "Sobre", "Home")</li>
+                        <li><a href="#">Olá @User.Identity.Name</a></li>
+                        @using (Html.BeginForm("LogOff", "Conta", FormMethod.Post, new { id= "logoffForm" }))
+                        {
+                            <li><a href="javascript:document.getElementById('logoffForm').submit()">Sair</a></li>
+                        }
+                    </ul>
+                </div>
+            }
+            else
+            {
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Sobre", "Sobre", "Home")</li>
+                    <li>@Html.ActionLink("Login", "Login", "Conta")</li>
                 </ul>
+            }
             </div>
-        </div>
     </div>
     <div class="container body-content">
         @RenderBody()
