--- a/loginMVC/Views/Conta/Login.cshtml
+++ b/loginMVC/Views/Conta/Login.cshtml
@@ -1,8 +1,5 @@
-﻿
-<!-- Mostrar aonde o POST está indo -->
+﻿<!-- Mostrar aonde o POST está indo -->
 @model loginMVC.Models.LoginViewModel
-
-
 @{
     ViewBag.Title = "Login";
 }
